// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders correctly 1`] = `
.emotion-6 {
  background-color: rgb(216,234,204);
  padding-top: 64px;
  padding-bottom: 64px;
}

@media screen and (min-width:40em) {
  .emotion-6 {
    padding-top: 128px;
    padding-bottom: 128px;
  }
}

.emotion-5 {
  padding-left: 32px;
  padding-right: 32px;
}

@media screen and (min-width:40em) {
  .emotion-5 {
    margin-left: auto;
    margin-right: auto;
  }
}

@media screen and (min-width:40em) {
  .emotion-5 {
    width: 75%;
  }
}

.emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-size: 48px;
  font-weight: 300;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 64px;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    font-size: 80px;
  }
}

.emotion-1 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 36px;
  font-weight: 400;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 8px;
}

@media screen and (min-width:40em) {
  .emotion-1 {
    font-size: 46px;
  }
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  margin-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
}

<header
  class="emotion-6"
>
  <div
    class="emotion-5"
  >
    <h1
      class="emotion-0"
    >
      Andy Kenward
    </h1>
    <h2
      class="emotion-1"
    >
      Senior Front-End Engineer
    </h2>
    <div
      class="emotion-4"
    >
      <a
        class="emotion-2"
        href="a@a.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Email
      </a>
      <a
        class="emotion-2"
        href="github"
        rel="noopener noreferrer"
        target="_blank"
      >
        GitHub
      </a>
    </div>
  </div>
</header>
`;

exports[`<Header /> renders null when data is null 1`] = `null`;

exports[`<Header /> renders null when data is undefined 1`] = `null`;

exports[`<Header /> renders when name is \`null\` 1`] = `
.emotion-6 {
  background-color: rgb(216,234,204);
  padding-top: 64px;
  padding-bottom: 64px;
}

@media screen and (min-width:40em) {
  .emotion-6 {
    padding-top: 128px;
    padding-bottom: 128px;
  }
}

.emotion-5 {
  padding-left: 32px;
  padding-right: 32px;
}

@media screen and (min-width:40em) {
  .emotion-5 {
    margin-left: auto;
    margin-right: auto;
  }
}

@media screen and (min-width:40em) {
  .emotion-5 {
    width: 75%;
  }
}

.emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-size: 48px;
  font-weight: 300;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 64px;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    font-size: 80px;
  }
}

.emotion-1 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 36px;
  font-weight: 400;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 8px;
}

@media screen and (min-width:40em) {
  .emotion-1 {
    font-size: 46px;
  }
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  margin-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
}

<header
  class="emotion-6"
>
  <div
    class="emotion-5"
  >
    <h1
      class="emotion-0"
    />
    <h2
      class="emotion-1"
    >
      Role
    </h2>
    <div
      class="emotion-4"
    >
      <a
        class="emotion-2"
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        Email
      </a>
      <a
        class="emotion-2"
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        GitHub
      </a>
    </div>
  </div>
</header>
`;

exports[`<Header /> renders when role is \`null\` 1`] = `
.emotion-6 {
  background-color: rgb(216,234,204);
  padding-top: 64px;
  padding-bottom: 64px;
}

@media screen and (min-width:40em) {
  .emotion-6 {
    padding-top: 128px;
    padding-bottom: 128px;
  }
}

.emotion-5 {
  padding-left: 32px;
  padding-right: 32px;
}

@media screen and (min-width:40em) {
  .emotion-5 {
    margin-left: auto;
    margin-right: auto;
  }
}

@media screen and (min-width:40em) {
  .emotion-5 {
    width: 75%;
  }
}

.emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-size: 48px;
  font-weight: 300;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 64px;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    font-size: 80px;
  }
}

.emotion-1 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 36px;
  font-weight: 400;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 8px;
}

@media screen and (min-width:40em) {
  .emotion-1 {
    font-size: 46px;
  }
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  margin-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
}

<header
  class="emotion-6"
>
  <div
    class="emotion-5"
  >
    <h1
      class="emotion-0"
    >
      Name
    </h1>
    <h2
      class="emotion-1"
    />
    <div
      class="emotion-4"
    >
      <a
        class="emotion-2"
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        Email
      </a>
      <a
        class="emotion-2"
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        GitHub
      </a>
    </div>
  </div>
</header>
`;
